refactor healthcheck and fix swagger docs
